# Kinect3D

./: .gitignore  CITATION.cff  LICENSE  README.md
1.DepthFromKinect/: README.md
1.DepthFromKinect/C++/: CMakeLists.txt  KinectV2Depth.cpp
1.DepthFromKinect/Python/: KinectV2Depth.py
2.Filters/: README.md
2.Filters/ClusterExtraction/: CMakeLists.txt  ClusterExtraction.cpp  README.md
2.Filters/DepthFilter/: CMakeLists.txt  README.md  distance_filter.cpp
2.Filters/DownSample/: CMakeLists.txt  DownSample.cpp  README.md
2.Filters/PlanarFilter/: CMakeLists.txt  PlanarFilter.cpp  README.md
2.Filters/unfilter/: CMakeLists.txt  README.md  unfilter.cpp
3.ICP/: CMakeLists.txt  README.md  interactive_icp.cpp
Pointcloud-data/: README.md
